Bug 994185 - When dragging tiles on a 3x2 view, a third row of tiles shows up inexplicably [r=adw] Also fixes Bug 988907 - Context menu and clicking-to-focus do not work in empty space above/below newtab grid Cover up the sites that become position: absolute (and escape the flow for overflow: hidden) with an explicit background color for the bottom margin.
UltraBlame original commit: f1ad078b79e534ca43a580b694261851c9bb3a75

--- a/browser/base/content/newtab/newTab.css
+++ b/browser/base/content/newtab/newTab.css
@@ -290,7 +290,9 @@ newtab
 -
 margin
 -
-top
+undo
+-
+container
 {
 display
 :
@@ -298,19 +300,6 @@ display
 moz
 -
 box
-;
-height
-:
-40px
-;
--
-moz
--
-box
--
-align
-:
-center
 ;
 -
 moz
@@ -343,7 +332,41 @@ box
 -
 flex
 :
-5
+1
+;
+}
+#
+newtab
+-
+margin
+-
+top
+#
+newtab
+-
+margin
+-
+bottom
+{
+display
+:
+-
+moz
+-
+box
+;
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+position
+:
+relative
 ;
 }
 .
